Fixed media queries for popup divs on mobile view

--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -13,6 +13,7 @@
     display: grid;
     grid-template-columns: 39% 60%;
     height: 80vh;
+    min-height: 700px;
 }
 
 #indexPhoto {
